test annotation cleanup